@@ -15,6 +15,9 @@ Changelog for NICOS 2
   - Added a "debug" keyword-only argument to "Simulate()" that prints a
     traceback on exception.
 
+  - Added "obsreadings" parameter to generic axis to use instead of the
+    hardcoded 100 times when asking observers for the current value.
+
 **Release 2.1.2**
 
   - Fixed not being able to run another manualscan after stopping a
